# asyncio-RSS-reader-to-api-service

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
api_service/src/: main.py
api_service/src/api/v1/: api.py
api_service/src/api/v1/core/: config.py  services.py
api_service/src/api/v1/endpoints/: data_holder.py  parser.py
api_service/src/core/: config.py
common/: config.py  schemas.py  tkq.py
common/database/: task_repository.py
common/database/core/: redis_service.py
