[project]
name = "asyncio-rss-reader-to-api-service"
version = "0.1.0"
description = ""
authors = [
    {name = "ksiki",email = "j.kolyasha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "python-decouple (>=3.8,<4.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "atoma (>=0.0.17,<0.0.18)",
    "httpx (>=0.28.1,<0.29.0)",
    "taskiq (>=0.12.2,<0.13.0)",
    "taskiq-aio-pika (>=0.6.0,<0.7.0)",
    "taskiq-redis (>=1.2.2,<2.0.0)",
    "taskiq-fastapi (>=0.5.0,<0.6.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
